[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^1.13.1", extras = ["cu117"] }
dgl = { version = "^1.1.3", extras = ["cu117"] }
scanpy = "^1.10.0"
einops = "^0.6.0"
leidenalg = "^0.9.0"
libpysal = "4.8.1"
esda = "2.5.1"
scikit-misc = "*"
rpy2 = { version = "*", optional = true }
ipykernel = { version = "*", optional = true }
sphinx = { version = "*", optional = true }
sphinx-book-theme = { version = "*", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
sphinxcontrib-bibtex = { version = "*", optional = true }
nbsphinx = { version = "*", optional = true }
furo = { version = "*", optional = true }
sphinx-copybutton = { version = "*", optional = true }
sphinx-autoapi = { version = "*", optional = true }
myst-parser = { version = "*", optional = true }

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"

[[tool.poetry.source]]
name = "dgl"
url = "https://data.dgl.ai/wheels/cu117"
priority = "supplemental"
